force-app/main/default/objects/HP_LOG_CALLOUT__b/HP_LOG_CALLOUT__b.object-meta.xml
<CustomObject>
    <label>HP LOG CALLOUT</label>
    <pluralLabel>HP LOG CALLOUT</pluralLabel>
</CustomObject>