force-app/main/default/objects/HP_LOG_CALLOUT__b/fields/Body_Request__c.field-meta.xml
<CustomField>
    <fullName>Body_Request__c</fullName>
    <label>Body_Request</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>