force-app/main/default/objects/HP_LOG_CALLOUT__b/fields/Call_Time_Execution__c.field-meta.xml
<CustomField>
    <fullName>Call_Time_Execution__c</fullName>
    <label>Call Time Execution</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>