force-app/main/default/objects/HP_LOG_CALLOUT__b/fields/Key_Row__c.field-meta.xml
<CustomField>
    <fullName>Key_Row__c</fullName>
    <label>Key Row</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>