force-app/main/default/objects/HP_LOG_CALLOUT__b/fields/Method__c.field-meta.xml
<CustomField>
    <fullName>Method__c</fullName>
    <label>Method</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>