force-app/main/default/objects/HP_LOG_CALLOUT__b/fields/User_Id__c.field-meta.xml
<CustomField>
    <fullName>User_Id__c</fullName>
    <label>User_Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>